--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .hero-img {
     height: 60vh;
 }
+
+.about-me-img {
+    background-image: url(http://placekitten.com/200/300);
+    background-position: center;
+    background-size: cover;
+    height: 40vh;
+}
