--- a/style.css
+++ b/style.css
@@ -1,16 +1,54 @@
-.hero-img {
-    height: 60vh;
+body {
+    font-family: 'Edu NSW ACT Foundation', cursive;
 }
 
+@media only screen and (max-width: 767px) {
+    section.row.grow40.dark-gray.pt-3.pb-3.align-items-center {
+      height: 60vh;
+      align-items: center;
+      justify-items: center;
+      align-self: center;
+      padding: 0;
+      margin: 0;
+    }
+  }
+  
+.dark-gray {
+    background-color: rgb(47, 47, 47);
+}
+
+.light-gray {
+    background-color: rgb(214, 214, 214);
+}
+
+.contact-form {
+    background-color: rgba(77, 77, 77, 0.664);
+}
+
+.text-shadow {
+    text-shadow: 4px 4px 8px #414141;
+}
+
+.hero-img {
+    height: 60vh;
+    background-image: url(https://images.unsplash.com/photo-1492691527719-9d1e07e534b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80);
+    background-position: center;
+    background-size: cover;
+}
+
+
+
 .about-me-img {
-    background-image: url(http://placekitten.com/200/300);
+    background-image: url(https://images.unsplash.com/photo-1603574670812-d24560880210?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80);
     background-position: center;
     background-size: cover;
     height: 40vh;
 }
 
-.review-card {
-
+.skills-card {
+    transform: translateY(-40);
+    
+    
 }
 
 .grow10 {
@@ -24,6 +62,7 @@
 .grow40 {
     height: 40vh;
 }
+
 
 .secondary-color {
     background-color: silver;
